[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/CommandPalettePopup/SettingsAdder.gd" type="Script" id=1]

[sub_resource type="Image" id=1]
data = {
"data": PoolByteArray( 23, 22, 26, 111, 29, 28, 33, 239, 32, 30, 36, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 32, 30, 36, 247, 29, 28, 33, 239, 23, 22, 26, 111, 29, 28, 33, 240, 36, 34, 41, 255, 40, 38, 45, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 45, 255, 36, 34, 41, 255, 29, 28, 33, 240, 32, 30, 36, 249, 40, 38, 45, 255, 43, 42, 49, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 43, 42, 49, 255, 40, 38, 45, 255, 32, 30, 36, 249, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 33, 31, 37, 247, 40, 38, 46, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 40, 38, 46, 255, 33, 31, 37, 247, 32, 30, 36, 249, 40, 38, 45, 255, 43, 42, 49, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 44, 42, 50, 255, 43, 42, 49, 255, 40, 38, 45, 255, 32, 30, 36, 249, 29, 28, 33, 240, 36, 34, 41, 255, 40, 38, 45, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 46, 255, 40, 38, 45, 255, 36, 34, 41, 255, 29, 28, 33, 241, 23, 22, 26, 111, 29, 28, 33, 240, 32, 30, 36, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 33, 31, 37, 247, 32, 30, 36, 247, 29, 28, 33, 238, 23, 22, 26, 111 ),
"format": "RGBA8",
"height": 10,
"mipmaps": false,
"width": 10
}

[sub_resource type="ImageTexture" id=2]
flags = 4
flags = 4
image = SubResource( 1 )
size = Vector2( 10, 10 )

[sub_resource type="StyleBoxTexture" id=3]
texture = SubResource( 2 )
region_rect = Rect2( 0, 0, 10, 10 )
margin_left = 5.0
margin_right = 5.0
margin_top = 5.0
margin_bottom = 5.0

[node name="SettingsAdder" type="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
window_title = "Add Project Setting"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -20.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 964.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TypeValueHB" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 964.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer/TypeValueHB"]
margin_top = 8.0
margin_right = 30.0
margin_bottom = 22.0
text = "Type"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/TypeValueHB"]
margin_left = 34.0
margin_top = 5.0
margin_right = 184.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 4
text = "Bool"
align = 1
items = [ "Bool", null, false, 1, null, "Int", null, false, 2, null, "Float", null, false, 3, null, "String", null, false, 4, null, "Vector2", null, false, 5, null, "Rect2", null, false, 6, null, "Vector3", null, false, 7, null, "Transform2D", null, false, 8, null, "Plane", null, false, 9, null, "Quat", null, false, 10, null, "AABB", null, false, 11, null, "Basis", null, false, 12, null, "Transform", null, false, 13, null, "Color", null, false, 14, null, "Node Path", null, false, 15, null, "RID", null, true, 16, null, "Object", null, true, 17, null, "Dictionary", null, false, 18, null, "Array", null, false, 19, null, "PoolByteArray", null, false, 20, null, "PoolIntArray", null, false, 21, null, "PoolRealArray", null, false, 22, null, "PoolStrinArray", null, false, 23, null, "PoolVector2Array", null, false, 24, null, "PoolVector3Array", null, false, 25, null, "PoolColorArray", null, false, 26, null ]
selected = 0

[node name="ValueLabel" type="Label" parent="MarginContainer/VBoxContainer/TypeValueHB"]
margin_left = 188.0
margin_top = 8.0
margin_right = 223.0
margin_bottom = 22.0
text = "Value"

[node name="ValueLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/TypeValueHB"]
margin_left = 227.0
margin_top = 3.0
margin_right = 964.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PathHB" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 964.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )

[node name="PathLabel" type="Label" parent="MarginContainer/VBoxContainer/PathHB"]
margin_top = 8.0
margin_right = 86.0
margin_bottom = 22.0
text = "Property Path"

[node name="PathLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/PathHB"]
margin_left = 90.0
margin_top = 3.0
margin_right = 964.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="HintHintStringHB" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 964.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 30 )

[node name="HintLabel" type="Label" parent="MarginContainer/VBoxContainer/HintHintStringHB"]
margin_top = 8.0
margin_right = 27.0
margin_bottom = 22.0
text = "Hint"

[node name="OptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HintHintStringHB"]
margin_left = 31.0
margin_top = 5.0
margin_right = 181.0
margin_bottom = 25.0
rect_min_size = Vector2( 150, 0 )
size_flags_vertical = 4
toggle_mode = false
text = "None"
align = 1
items = [ "None", null, false, 0, null, "Exponential Range", null, true, 2, null, "Enum", null, false, 3, null, "Exponential Easing", null, true, 4, null, "Flags", null, true, 8, null, "Layers 2D Render", null, true, 9, null, "Layers 2D Physics", null, true, 10, null, "Layers 3D Render", null, true, 11, null, "Layers 3D Physics", null, true, 12, null, "File Path", null, false, 13, null, "Directory Path", null, false, 14, null, "Global File Path", null, false, 15, null, "Global Directory Path", null, false, 16, null, "Resource Type", null, true, 17, null, "Multiline Text", null, false, 18, null, "Placeholder Text", null, false, 19, null, "Color No Alpha", null, false, 20, null, "IMG Compress Lossy", null, true, 21, null, "IMG Compress lossless", null, true, 22, null, "Range", null, false, 1, null ]
selected = 0

[node name="HintStringLabel" type="Label" parent="MarginContainer/VBoxContainer/HintHintStringHB"]
margin_left = 185.0
margin_top = 8.0
margin_right = 252.0
margin_bottom = 22.0
text = "Hint String"

[node name="HintStringLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/HintHintStringHB"]
margin_left = 256.0
margin_top = 3.0
margin_right = 964.0
margin_bottom = 27.0
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ButtonsHB" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 457.0
margin_top = 166.0
margin_right = 507.0
margin_bottom = 186.0
size_flags_horizontal = 6
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
custom_constants/separation = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsHB"]
margin_right = 50.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )
text = "Save"

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 254.0
margin_right = 964.0
margin_bottom = 550.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/normal = SubResource( 3 )
text = "\"False\"/\"false\" as the value will set the setting to false. Any other non-empty string will set it to true."
autowrap = true

[node name="PredictionList" type="ItemList" parent="."]
visible = false
margin_left = 4.0
margin_top = 4.0
margin_right = 74.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="about_to_show" from="." to="." method="_on_AddSetting_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_AddSetting_popup_hide"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TypeValueHB/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="focus_entered" from="MarginContainer/VBoxContainer/PathHB/PathLineEdit" to="." method="_on_PathLineEdit_focus_entered"]
[connection signal="focus_exited" from="MarginContainer/VBoxContainer/PathHB/PathLineEdit" to="." method="_on_PathLineEdit_focus_exited"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer/PathHB/PathLineEdit" to="." method="_on_PathLineEdit_text_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/HintHintStringHB/OptionButton" to="." method="_on_HintButton_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsHB/SaveButton" to="." method="_on_SaveButton_pressed"]
